// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreprintCitation renders  component with a doi view 1`] = `
<div>
  <span
    class="citationContent citationPreprint"
    id="citation-content-UQ:10457"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Asmussen, S.
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Kroese, D. P.
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        Rubinstein, R. Y.
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2004
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Heavy Tails, Importance Sampling and Cross-Entropy
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.1111/1111"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
          />
        </svg>
        https://doi.org/10.1111/1111
      </a>
    </span>
  </span>
</div>
`;

exports[`PreprintCitation renders  component with a mock espace record 1`] = `
<div>
  <span
    class="citationContent citationPreprint"
    id="citation-content-UQ:10457"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Asmussen, S.
      </span>
      , 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Kroese, D. P.
      </span>
      , 
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        Rubinstein, R. Y.
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2004
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Heavy Tails, Importance Sampling and Cross-Entropy
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </span>
</div>
`;

exports[`PreprintCitation renders  component with empty publication 1`] = `
<div>
  <span
    class="citationContent citationPreprint"
    id="citation-content-undefined"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationDOI empty"
    />
  </span>
</div>
`;
